DARP Protocol with matrix and basic data graphs +

--- a/srwan/srwan.html
+++ b/srwan/srwan.html
@@ -3,7 +3,7 @@
   <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="chrome=1,IE=edge" />
-	<title>alpha1</title>
+	<title>srwan</title>
 	<style>
 		html {
 			height:100%;
@@ -17,7 +17,7 @@
 	<!-- copy these lines to your document head: -->
 
 	<meta name="viewport" content="user-scalable=yes, width=1920" />
-	<script type="text/javascript" src="alpha1.7.hyperesources/jquery-3.2.1.min.js"></script>
+	<script type="text/javascript" src="srwan.hyperesources/jquery-3.2.1.min.js"></script>
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="  crossorigin="anonymous"></script>
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.css">
   
@@ -66,6 +66,9 @@ gDisplayConfig["MAZ-GERMANYWESTCENTRAL-00"]={"geo":"MAZ-GERMANYWESTCENTRAL-00","
 
 
 gDisplayConfig["DEVOPS"]= {"geo":"DEVOPS", "ipaddr":"127.0.0.1","port":"65013"};
+gDisplayConfig["LAURENT"]= {"geo":"LAURENT", "ipaddr":"82.65.22.26","port":"65013"};
+gDisplayConfig["ATTNU"]= {"geo":"ATTNU", "ipaddr":"88.99.84.162","port":"65013"};
+ 
 
 
 gDisplayConfig["AWS-AP-SOUTHEAST-1B"]={"geo":"AWS-AP-SOUTHEAST-1B","ipaddr":"3.0.93.178",    "port":"65013"};
@@ -108,8 +111,8 @@ function now() {return new Date().getTime()}
   <body>
 	<!-- copy these lines to your document: -->
 
-	<div id="alpha1_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:1920px;height:1080px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="alpha1.7.hyperesources/alpha1_hype_generated_script.js?35866"></script>
+	<div id="srwan_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:1920px;height:1080px;overflow:hidden;">
+		<script type="text/javascript" charset="utf-8" src="srwan.hyperesources/srwan_hype_generated_script.js?35931"></script>
 	</div>
 
 	<!-- end copy -->
